HTML semantic sections

--- a/index.html
+++ b/index.html
@@ -10,8 +10,30 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
-  <h1>Taller de Maquetación</h1>
-  <img src="assets/hero-image-home.jpg" alt="Hero">
+  <header class="header">
+    <h2>Header</h2>
+  </header>
+  <section id="inicio" class="home">
+    <h2>Home</h2>
+  </section>
+  <section id="acerca" class="about">
+    <h2>Acerca</h2>
+  </section>
+  <section id="servicios" class="services">
+    <h2>Servicios</h2>
+  </section>
+  <section id="portafolio" class="portfolio">
+    <h2>Trabajos</h2>
+  </section>
+  <section id="testimonios" class="testimonials">
+    <h2>Testimonios</h2>
+  </section>
+  <section id="contacto" class="contatc">
+    <h2>Contacto</h2>
+  </section>
+  <footer class="footer"></footer>
 </body>
+
 </html>
