--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>Example Portfolio</title>
 </head>
 
 <body>
@@ -37,7 +37,16 @@
   </header>
 
   <section id="inicio" class="home">
-    <h2>Home</h2>
+    <article class="hero-image" style="--hero-image: url('assets/hero-image-home.jpg'); --hero-attachment: fixed">
+      <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
+        <div class="hero-image-content">
+          <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
+            Bienvenid@s<br>a mi sitio
+          </h2>
+          <a href="#contacto" class="btn">Contactame</a>
+        </div>
+      </aside>
+    </article>
   </section>
 
   <section id="acerca" class="about">
