Section Acerca  FirstMobile

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </section>
   </header>
 
+  <!-- Section Home -->
   <section id="inicio" class="home">
     <article class="hero-image" style="--hero-image: url('assets/hero-image-home.jpg'); --hero-attachment: fixed">
       <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
@@ -49,8 +50,70 @@
     </article>
   </section>
 
+  <!-- Section About -->
   <section id="acerca" class="about">
-    <h2>Acerca</h2>
+    <article>
+      <aside class="slogan">
+        <h1>Jonnathan Baculima</h1>
+        <h5><i>Web developer</i></h5>
+      </aside>
+    </article>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores cumque voluptate optio ut suscipit consequuntur qui asperiores delectus odio deleniti omnis debitis id, reiciendis culpa quia tempore quo obcaecati eos repudiandae magni veniam sequi amet sapiente quibusdam. Sunt molestias enim earum reiciendis consequuntur quis, dignissimos nemo ipsa at consectetur alias?
+    </p>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus sapiente ullam quas modi perspiciatis quod esse odit numquam molestias enim!
+    </p>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam deserunt eum eaque nobis nisi iusto asperiores corrupti corporis!
+    </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error voluptates nesciunt accusantium?.</p>
+    <div>
+      <a href="https://www.google.com" class="btn" target="_blank" rel="noopenner">Download CV</a>
+    </div>
+    <!-- Image -->
+    <article>
+      <img class="gray-scale" src="https://placeimg.com/640/480/people" alt="People">
+    </article>
+    <!-- Skills Progress -->
+    <article>
+      <h2>Skills</h2>
+      <div class="progress">
+        <p>
+          <b><i>First Skill</i></b>
+          <b>90%</b>
+        </p>
+        <progress value="90" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Second Skill</i></b>
+          <b>85%</b>
+        </p>
+        <progress value="85" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Third Skill</i></b>
+          <b>80%</b>
+        </p>
+        <progress value="80" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Fourth Skill</i></b>
+          <b>70%</b>
+        </p>
+        <progress value="70" min="0" max="100"></progress>
+      </div>
+      <div class="progress">
+        <p>
+          <b><i>Fifth Skill</i></b>
+          <b>60%</b>
+        </p>
+        <progress value="60" min="0" max="100"></progress>
+      </div>
+    </article>
   </section>
 
   <section id="servicios" class="services">
