Section About (Dekstop) + Utilities MQ text-align

--- a/index.html
+++ b/index.html
@@ -51,33 +51,33 @@
   </section>
 
   <!-- Section About -->
-  <section id="acerca" class="about">
-    <article>
-      <aside class="slogan">
+  <section id="acerca" class="about section container full-lg-screen">
+    <article class="text-lg-right">
+      <aside class="text-center text-lg-right">
         <h1>Jonnathan Baculima</h1>
         <h5><i>Web developer</i></h5>
       </aside>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores cumque voluptate optio ut suscipit consequuntur qui asperiores delectus odio deleniti omnis debitis id.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus sapiente ullam quas modi perspiciatis quod esse odit numquam molestias enim!
+      </p>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam deserunt eum eaque nobis nisi iusto asperiores corrupti corporis!
+      </p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error voluptates nesciunt accusantium?.</p>
+      <div class="text-center text-lg-left">
+        <a href="https://www.google.com" class="btn" target="_blank" rel="noopenner">Download CV</a>
+      </div>
     </article>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores cumque voluptate optio ut suscipit consequuntur qui asperiores delectus odio deleniti omnis debitis id, reiciendis culpa quia tempore quo obcaecati eos repudiandae magni veniam sequi amet sapiente quibusdam. Sunt molestias enim earum reiciendis consequuntur quis, dignissimos nemo ipsa at consectetur alias?
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus sapiente ullam quas modi perspiciatis quod esse odit numquam molestias enim!
-    </p>
-    <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam deserunt eum eaque nobis nisi iusto asperiores corrupti corporis!
-    </p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error voluptates nesciunt accusantium?.</p>
-    <div>
-      <a href="https://www.google.com" class="btn" target="_blank" rel="noopenner">Download CV</a>
-    </div>
     <!-- Image -->
     <article>
-      <img class="gray-scale" src="https://placeimg.com/640/480/people" alt="People">
+      <img class="gray-scale" src="https://placeimg.com/800/600/people" alt="People">
     </article>
     <!-- Skills Progress -->
     <article>
-      <h2>Skills</h2>
+      <h2 class="text-center text-lg-left">Skills</h2>
       <div class="progress">
         <p>
           <b><i>First Skill</i></b>
