Section Services First Mobile

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
     </article>
   </section>
 
-  <section id="servicios" class="services section">
+  <!-- Section Services -->
+  <section id="servicios" class="services section bg-gray-light">
     <div class="container">
       <h2 class="section-title">Qué te ofrezco?</h2>
       <article class="service-card">
