--- a/index.html
+++ b/index.html
@@ -153,8 +153,80 @@
     </div>
   </section>
 
-  <section id="portafolio" class="portfolio">
-    <h2>Trabajos</h2>
+  <!-- Section Portfolio -->
+  <section id="portafolio" class="portfolio section">
+    <a href="#trabajo-1" class="portfolio-card">
+      <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 1</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+
+    <a href="#trabajo-2" class="portfolio-card">
+      <img src="assets/portfolio-2.jpg" alt="Trabajo 2">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+
+    <a href="#trabajo-3" class="portfolio-card">
+      <img src="assets/portfolio-3.jpg" alt="Trabajo 3">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 3</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+
+    <a href="#trabajo-4" class="portfolio-card">
+      <img src="assets/portfolio-4.jpg" alt="Trabajo 4">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 4</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+
+    <a href="#trabajo-5" class="portfolio-card">
+      <img src="assets/portfolio-5.jpg" alt="Trabajo 5">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 5</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+
+    <a href="#trabajo-6" class="portfolio-card">
+      <img src="assets/portfolio-6.jpg" alt="Trabajo 6">
+      <aside class="portfolio-card-info">
+        <div>
+          <h3>Proyecto 6</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis, autem adipisci odit ipsam consequuntur nulla suscipit maiores accusamus et eos voluptatibus culpa cum recusandae! Cupiditate ratione maiores optio eos voluptas?
+          </p>
+        </div>
+      </aside>
+    </a>
+    
   </section>
 
   <section id="testimonios" class="testimonials">
