Section Portfolio (Modal Content) full

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error voluptates nesciunt accusantium?.</p>
       <div class="text-center text-lg-left">
-        <a href="https://www.google.com" class="btn" target="_blank" rel="noopenner">Download CV</a>
+        <a href="https://https://www.google.com" class="btn" target="_blank" rel="noopenner">Download CV</a>
       </div>
     </article>
     <!-- Image -->
@@ -237,7 +237,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 1</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-1.jpg" alt="Trabajo 1">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 1</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -246,7 +262,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 2</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-2.jpg" alt="Trabajo 2">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 2</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -255,7 +287,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 3</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-3.jpg" alt="Trabajo 3">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 3</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -264,7 +312,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 4</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-4.jpg" alt="Trabajo 4">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 4</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -273,7 +337,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 5</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-5.jpg" alt="Trabajo 5">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 5</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -282,7 +362,23 @@
       <a href="#cerrar" class="modal-close">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12,2C6.486,2,2,6.486,2,12s4.486,10,10,10s10-4.486,10-10S17.514,2,12,2z M16.207,14.793l-1.414,1.414L12,13.414 l-2.793,2.793l-1.414-1.414L10.586,12L7.793,9.207l1.414-1.414L12,10.586l2.793-2.793l1.414,1.414L13.414,12L16.207,14.793z"/></svg>
       </a>
-      <h2>Contenido del Modal 6</h2>
+      <article class="portfolio-modal">
+        <img src="assets/portfolio-6.jpg" alt="Trabajo 6">
+        <div class="portfolio-info">
+          <h3>NOMBRE DEL PROYECTO 6</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia non nesciunt deleniti tempore eius molestiae reiciendis est! Saepe ullam dolor at, optio, nostrum eveniet ipsa illo consequuntur accusamus voluptate facere.</p>
+          <aside class="portfolio-details">
+            <small><b>Cliente:</b></small>
+            <small>Nombre del cliente</small>
+            <small><b>Fecha:</b></small>
+            <small>24/12/2020</small>
+            <small><b>Tipo:</b></small>
+            <small>Tipo de Proyecto</small>
+            <small><b>Enlace:</b></small>
+            <small><a href="https://www.google.com" target="_blank" rel="noopenner">Enlace del proyecto</a></small>
+          </aside>
+        </div>
+      </article>
     </div>
   </article>
 
@@ -294,8 +390,10 @@
     <h2>Contacto</h2>
   </section>
 
+  
+  
+  
   <footer class="footer"></footer>
-
 
   <script src="script.js"></script>
 </body>
