--- a/index.html
+++ b/index.html
@@ -389,43 +389,43 @@
         <div class="hero-image-content">
           <div class="container">
             <h2 class="section-title">Mis clientes dicen</h2>
-            <article class="carrusel" style="--carousel-bg-color: var(--white-alpha-color);">
+            <article class="carousel" style="--carousel-bg-color: var(--white-alpha-color);">
               <input type="radio" name="slides" id="slide-1" checked>
               <input type="radio" name="slides" id="slide-2">
               <input type="radio" name="slides" id="slide-3">
               <input type="radio" name="slides" id="slide-4">
+              <ul class="slides">
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 1">
+                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
+                  <h3 class="text-first-color">Nombre del Cliente</h3>
+                  <h6>Puesto del Cliente</h6>
+                </li>
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 2">
+                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
+                  <h3 class="text-first-color">Nombre del Cliente 2</h3>
+                  <h6>Puesto del Cliente 2</h6>
+                </li>
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-1.jpg" alt="Cliente 3">
+                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
+                  <h3 class="text-first-color">Nombre del Cliente 3</h3>
+                  <h6>Puesto del Cliente 3</h6>
+                </li>
+                <li class="slide">
+                  <img class="avatar" src="assets/customer-2.jpg" alt="Cliente 4">
+                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
+                  <h3 class="text-first-color">Nombre del Cliente 4</h4>
+                  <h6>Puesto del Cliente 3</h6>
+                </li>
+              </ul>
               <aside class="slides-nav">
                 <label for="slide-1" id="dot-1"></label>
                 <label for="slide-2" id="dot-2"></label>
                 <label for="slide-3" id="dot-3"></label>
                 <label for="slide-4" id="dot-4"></label>
               </aside>
-              <ul class="slides">
-                <li class="slide">
-                  <img src="assets/customer-1.jpg" alt="Cliente 1">
-                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
-                  <h3>Nombre del Cliente</h3>
-                  <h6>Puesto del Cliente</h6>
-                </li>
-                <li class="slide">
-                  <img src="assets/customer-2.jpg" alt="Cliente 2">
-                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
-                  <h3>Nombre del Cliente 2</h3>
-                  <h6>Puesto del Cliente 2</h6>
-                </li>
-                <li class="slide">
-                  <img src="assets/customer-1.jpg" alt="Cliente 3">
-                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
-                  <h3>Nombre del Cliente 3</h3>
-                  <h6>Puesto del Cliente 3</h6>
-                </li>
-                <li class="slide">
-                  <img src="assets/customer-2.jpg" alt="Cliente 4">
-                  <blockquote>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo ad nihil quaerat unde ut eos nesciunt eligendi nulla, repudiandae quos ducimus laborum itaque magnam sequi sunt voluptatum dicta assumenda libero."</blockquote>
-                  <h3>Nombre del Cliente 4</h4>
-                  <h6>Puesto del Cliente 3</h6>
-                </li>
-              </ul>
             </article>
           </div>
         </div>
