Last Contact Section Form functionality full

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
   </section>
 
   <!-- Section Contact -->
-  <section id="contacto" class="contact section">
+  <section id="contacto" class="contact section full-lg-screen">
     <div class="container">
       <h2 class="section-title">¿Interesado?</h2>
       <article class="contact-cards">
@@ -488,7 +488,6 @@
               </a>
             </small>
         </aside>
-
       </article>
       <form class="contact-form box-shadow-1">
         <input
@@ -532,8 +531,9 @@
   </section>
   
   <!-- Footer -->
-  <footer class="footer"></footer>
-
+  <footer class="footer">
+    <small>Sitio diseñado por: <a href="https://www.github.com/JonnathanBc" target="_blank" rel="noreferrer noopenner">Jonnathan Baculima</a></small>
+  </footer>
 
   <!-- scripts JS -->
   <script src="script.js"></script>
