Meta etiquetas + Readme github pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <title>Example Portfolio</title>
+
+  <title>Portfolio CV</title>
+  <meta name="description" content="Hola bienvenidos a mi portafolio, soy Jonnathan Baculima desarrollador web">
+  <link rel="canonical" href="https://JonnathanBC.github.io/taller-maquetacion">
+  <link rel="favicon" href="https://JonnathanBC.github.io/taller-maquetacion/assets/favicon.png">
+  <link rel="apple-touch-icon" href="https://JonnathanBC.github.io/taller-maquetacion/assets/favicon.png">
+  <meta name="theme-color" content="#d90062">
+  <meta name="twitter:card" content="summary">
+  <meta property="og:type" content="website">
+  <meta property="og:title" name="twitter:title" content="Portfolio CV">
+  <meta property="og:description" name="twitter:description" content="Hola bienvenidos a mi portafolio, soy Jonnathan Baculima desarrollador web">
+  <meta property="og:image" name="twitter:image" content="https://JonnathanBC.github.io/taller-maquetacion/assets/hero-image-home.jpg">
+  <meta property="og:url" name="twitter:url" content="https://JonnathanBC.github.io/taller-maquetacion">
 </head>
 
 <body>
@@ -532,7 +544,9 @@
   
   <!-- Footer -->
   <footer class="footer">
-    <small>Sitio diseñado por: <a href="https://www.github.com/JonnathanBc" target="_blank" rel="noreferrer noopenner">Jonnathan Baculima</a></small>
+    <small>
+      <a href="https://www.github.com/JonnathanBc" target="_blank" rel="noreferrer noopenner">Jonnathan Baculima</a>
+    </small>
   </footer>
 
   <!-- scripts JS -->
