--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
   <title>Portfolio CV</title>
   <meta name="description" content="Hola bienvenidos a mi portafolio, soy Jonnathan Baculima desarrollador web">
-  <link rel="canonical" href="https://JonnathanBC.github.io/taller-maquetacion">
-  <link rel="favicon" href="https://JonnathanBC.github.io/taller-maquetacion/assets/favicon.png">
-  <link rel="apple-touch-icon" href="https://JonnathanBC.github.io/taller-maquetacion/assets/favicon.png">
+  <link rel="canonical" href="ruta-absoluta">
+  <link rel="favicon" href="ruta-absoluta/assets/favicon.png">
+  <link rel="apple-touch-icon" href="ruta-absoluta/assets/favicon.png">
   <meta name="theme-color" content="#d90062">
   <meta name="twitter:card" content="summary">
   <meta property="og:type" content="website">
   <meta property="og:title" name="twitter:title" content="Portfolio CV">
   <meta property="og:description" name="twitter:description" content="Hola bienvenidos a mi portafolio, soy Jonnathan Baculima desarrollador web">
-  <meta property="og:image" name="twitter:image" content="https://JonnathanBC.github.io/taller-maquetacion/assets/hero-image-home.jpg">
-  <meta property="og:url" name="twitter:url" content="https://JonnathanBC.github.io/taller-maquetacion">
+  <meta property="og:image" name="twitter:image" content="ruta-absoluta/assets/hero-image-home.jpg">
+  <meta property="og:url" name="twitter:url" content="ruta-absoluta">
 </head>
 
 <body>
